
--- LikeBack v1.3 released ---

2009-07-16 (dazjorz)
 * Fixed encoding issues in the Trac plugin, and bumped version number to
 1.3.0 for imminent LikeBack release.
 * Fixed some errors in the upgrade script.

2009-06-26 (dazjorz)
 * Made the subject of all e-mails sent out by LikeBack start with
 "likebackMailSubject - ".
 * Fixed wrapping bug in e-mail where a LikeBack comment from a "deep window"
 (i.e. $window very long) would wrap without a '>' at the start of the line
 for the window parameter.
 * Fixed incorrect subject in a mail sent out by the Trac integration when it
 automatically closes a LikeBack comment.

2009-06-08 (dazjorz)
 * Implemented flags in database for 'email also sent to user' and 'status
 changed to foo' etc:
   - Added userNotified, statusChangedTo, resolutionchangedTo to database.
   - Changed the way these flags are displayed to the user in comment.php;
   using the remarkDeatils style.
   - Made the sent e-mails a bit smarter to display the values outside of the
   quoted remark message.
   - Added part to upgrade script to convert old remarks to the newer format.
 * Fixed upgrade script to actually allow upgrades.
 * Changed resolutions to be stored as their printable strings, instead of
 their ID's.
 * Made iconForResolution and messageForResolution not mind if they receive
 the resolution id or printable string.
 * Fixed comment.php not to save Status was changed when only Resolution was
 changed (Status stays at Closed for those changes)
 * Added view.php to insert a list of <a name> tags for all comment ID's not
 in the list, to allow the browser to go back to the same position when a
 comment is removed from the list.
 * Implemented bug triaging to Trac, including signals from Trac back to
 Likeback to close a comment:
 	 - Added Triaged status and icon, etc.
	 - Added tracbug and tracbugChangedTo columns to the database.
	 - Gave comment.php support for the Triaged status, with its quirks, along